✨ Adiciona sistema completo de relatórios com dashboard visual
🚀 NOVAS FUNCIONALIDADES:
- Dashboard de relatórios profissional com interface moderna
- Gráficos interativos usando Chart.js (vitórias e performance)
- Animações GSAP para entrada de elementos e interações
- Sistema de filtros por data e jogador
- Estatísticas detalhadas por jogador com avatares coloridos
- Histórico completo de partidas com timestamps
- Exportação de dados em formato JSON
- Design responsivo com glassmorphism e gradientes
- ScrollTrigger para animações baseadas em scroll
- Interface totalmente em português brasileiro

🔧 MELHORIAS TÉCNICAS:
- Correção do erro de date adapter do Chart.js
- Validações de segurança para elementos DOM
- Otimizações de performance nos gráficos
- Sistema de notificações visuais
- Persistência de dados via localStorage
- Código modular e organizado em classes ES6

📱 RESPONSIVIDADE:
- Design mobile-first
- Breakpoints para diferentes tamanhos de tela
- Touch-friendly para tablets e celulares
- Layout adaptativo para todos os dispositivos

🎨 RECURSOS VISUAIS:
- Paleta de cores consistente
- Tipografia hierárquica clara
- Efeitos de hover interativos
- Animações suaves e profissionais
- Cards com efeitos glassmorphism

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
             <button id="resetBtn" class="btn btn-secondary">Reiniciar</button>
             <button id="configBtn" class="btn btn-config">⚙️ Configurações</button>
         </div>
+        
+        <div class="reports-controls">
+            <a href="reports.html" class="btn btn-primary" target="_blank">📈 Dashboard de Relatórios</a>
+        </div>
 
         <!-- Menu de Configurações -->
         <div class="config-menu" id="configMenu">
