🔄 Adicionado botão para resetar o dashboard
✨ Nova funcionalidade:
- Botão 'Resetar Dashboard' na seção de filtros
- Confirmação dupla para evitar reset acidental
- Limpeza completa de dados e gráficos
- Notificações visuais de sucesso
- Estilo vermelho para indicar ação destrutiva

🔧 Implementação:
- Event listener para o botão de reset
- Método resetDashboard() com confirmação
- Método resetCharts() para limpar gráficos
- Integração com localStorage
- Animações GSAP para feedback visual

--- a/reports.html
+++ b/reports.html
@@ -180,6 +180,13 @@
                         Exportar Dados
                     </button>
                 </div>
+                
+                <div class="filter-group">
+                    <button id="resetDashboardBtn" class="reset-btn">
+                        <i class="fas fa-trash-alt"></i>
+                        Resetar Dashboard
+                    </button>
+                </div>
             </div>
         </section>
     </main>
