🔧 Corrigido Teste UDP + Método send_test_message
🐛 Problema Identificado:
- Mensagens de tipo 'test' não eram aceitas pelo servidor
- Servidor UDP não tinha método para mensagens de teste
- Teste UDP falhava com erro de tipo desconhecido

✅ Correções Implementadas:
- Adicionado suporte para tipo 'test' no servidor HTTP
- Criado método send_test_message() no servidor UDP
- Melhorado feedback visual na página de debug
- Logs detalhados para debug de UDP

🧪 Funcionalidades do Teste UDP:
- Envia mensagem de teste para jogador específico
- Mostra resposta HTTP completa
- Logs no console do servidor
- Verificação de status da resposta

📡 Servidor UDP Atualizado:
- Aceita mensagens de teste
- Processa e envia via UDP
- Logs detalhados de envio
- Múltiplos destinos (Aparato + Local)

🎯 Como Testar:
1. Acesse /test_windows_debug.html
2. Clique em 'Testar UDP'
3. Verifique logs no console do servidor
4. Confirme envio para porta 8888 (Aparato)

--- a/test_windows_debug.html
+++ b/test_windows_debug.html
@@ -200,6 +200,8 @@
                 timestamp: Date.now()
             };
             
+            log(`📤 Enviando: ${JSON.stringify(testData)}`);
+            
             fetch('/api/udp', {
                 method: 'POST',
                 headers: {
@@ -207,9 +209,13 @@
                 },
                 body: JSON.stringify(testData)
             })
-            .then(response => response.json())
+            .then(response => {
+                log(`📥 Resposta HTTP: ${response.status} ${response.statusText}`);
+                return response.json();
+            })
             .then(data => {
                 log(`✅ UDP testado com sucesso: ${JSON.stringify(data)}`);
+                log(`🎯 Verifique o console do servidor para logs UDP`);
             })
             .catch(error => {
                 log(`❌ Erro no teste UDP: ${error}`);
