🔧 Add Serial Port Configurator
✨ New Features:
- 🔧 Visual serial port configurator interface
- 📡 Automatic port detection and listing
- 🔌 Real-time connection status monitoring
- 💾 Persistent port configuration storage
- 🔄 Dynamic port switching without restart

🔧 Technical Improvements:
- 🐍 Enhanced server.py with serial management APIs
- 📡 /api/serial/ports endpoint for port discovery
- 📊 /api/serial/status endpoint for connection status
- 🔌 /api/serial/change-port endpoint for port switching
- 💾 JSON-based configuration persistence

🎨 UI/UX:
- 🔧 New "Serial" button in main game interface
- 📱 Responsive configurator interface
- 🎨 Modern design with status indicators
- 🔄 Real-time updates and feedback
- 📱 Cross-platform compatibility

🔄 Configuration Management:
- 💾 Automatic configuration loading on startup
- 🔍 Smart port detection and selection
- 🔌 Seamless ESP32 reconnection
- 📁 serial_config.json for persistence
- ⚠️ Graceful fallback when no ports available

🎯 User Experience:
- 🔧 Easy port selection from detected list
- 📊 Visual connection status indicators
- 🔄 One-click port switching
- 💡 Clear error messages and feedback
- 🚀 Works on any machine automatically

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             <button id="startBtn" class="btn btn-primary">Iniciar Jogo</button>
             <button id="resetBtn" class="btn btn-secondary">Reiniciar</button>
             <button id="configBtn" class="btn btn-config">⚙️ Configurações</button>
+            <button id="serialConfigBtn" class="btn btn-serial">🔧 Serial</button>
         </div>
         
         <div class="reports-controls">
