🔧 Debug: Melhorar logs e UX do configurador serial
- ✅ Adicionar confirmação visual ao selecionar porta
- ✅ Adicionar logs detalhados no servidor
- ✅ Melhorar feedback durante conexão
- ✅ Tratamento de erro mais robusto no endpoint change-port

--- a/serial_config.html
+++ b/serial_config.html
@@ -382,6 +382,9 @@
 
             // Habilitar botão de conexão
             document.getElementById('connectBtn').disabled = false;
+            
+            // Mostrar mensagem de confirmação
+            showMessage(`✅ Porta selecionada: ${port}. Clique em "Conectar" para continuar.`, 'info');
         }
 
         // Conectar à porta selecionada
@@ -390,6 +393,9 @@
                 showMessage('⚠️ Selecione uma porta primeiro', 'error');
                 return;
             }
+
+            console.log('Tentando conectar à porta:', selectedPort);
+            showMessage(`🔄 Conectando à porta ${selectedPort}...`, 'info');
 
             try {
                 // Primeiro, configurar a porta no servidor
